--- a/configuration_template.json
+++ b/configuration_template.json
@@ -7,5 +7,10 @@
     "saved_images_path": "./saved_images",
     "webhook_path": "",
     "global_rate_period": 3600,
-    "global_rate_limit": 100
+    "global_rate_limit": 100,
+
+    "db_name": "",
+    "db_host_name": "localhost",
+    "db_user": "",
+    "db_pwd": ""
 }
